# mcp

src/baidu-map-http-server/python/: pyproject.toml
src/baidu-map-http-server/python/src/mcp_http_server_baidu_maps/: __init__.py  __main__.py  map.py
